--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -22,7 +22,7 @@
     background: var(--color-primary);
     padding: 2rem;
     border-radius: 0 0 2rem 2rem;
-    box-shadow: 0 2rem 1rem rgba(0,0,0,0.1);
+    box-shadow: 0 2rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 .service__head h3{
@@ -42,9 +42,9 @@
     margin-bottom: 0.8rem;
 }
 
-.service__list icon {
+.service__list-icon {
     color: var(--color-primary);
-    margin-top: 0.9rem;
+    margin-top: 2px;
 }
 
 .service__list p {
@@ -54,22 +54,22 @@
 /*===============================MEDIA QUARIES(MEDIUM DEVICES)=======================================*/
 
 @media screen and (max-width:1024px) {
-  .services__container {
-    grid-template-columns: 1fr 1fr;
-    gap: 2rem;
-  }
-
-  .service {
-    height: auto;
-  }
-}
-
-/*===============================SMALL QUARIES(MEDIUM DEVICES)=======================================*/
-
-@media screen and (max-width:600px) {
     .services__container {
-        grid-template-columns: 1fr;
-        gap:1.5rem;
+      grid-template-columns: 1fr 1fr;
+      gap: 2rem;
     }
-
-}
+  
+    .service {
+      height: auto;
+    }
+  }
+  
+  /*===============================SMALL QUARIES(SMALL DEVICES)=======================================*/
+  
+  @media screen and (max-width:600px) {
+      .services__container {
+          grid-template-columns: 1fr;
+          gap:1.5rem;
+      }
+  
+  }
