--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ h1 {
 
 section {
     margin-top: 8rem;
-    height: 100vh;
+    
 
 }
 
@@ -71,7 +71,7 @@ section > h2, section > h5 {
 
 section > h2 {
     color: var(--color-primary);
-    margin: 3rem;
+    margin-bottom: 3rem;
 }
 
 .text-light {
@@ -126,6 +126,7 @@ img {
 
     section {
         margin-top: 6rem;
+        
     }
     
 }
@@ -139,6 +140,7 @@ img {
 
     section > h2 {
         margin-bottom: 2rem;
+       
     }
     
 }
