--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 header {
     height: 100vh;
-    padding-top: 7rem ;
+    padding-top: 2rem ;
     overflow: hidden;
 }
 
@@ -13,7 +13,8 @@ header {
 /*=============================== CTA ====================================*/
 
 .cta {
-    margin-top: 2.5rem;
+    margin-top: 1rem;
+    margin-right: 2rem;
     display: flex;
     gap: 1.2rem;
     justify-content: center;
@@ -45,7 +46,7 @@ header {
     background: linear-gradient(var(--color-primary),transparent);
     width: 22rem;
     height: 24.31rem;
-    position: absolute;
+    position: relative;
     left: 50%;
     transform:translateX(-50%);
     margin-top: 4rem;
@@ -74,6 +75,23 @@ header {
 @media screen and (max-width:1024px) {
     header {
         height: 68vh;
+    }
+
+    .me {
+        background: linear-gradient(var(--color-primary),transparent);
+        width: 16rem;
+        height: 24.31rem;
+        position: relative;
+        left: 50%;
+        transform:translateX(-50%);
+        margin-top: 2rem;
+        border-radius: 12rem 12rem 0 0;
+        overflow: hidden;
+        padding: 1rem 1rem 1rem 1rem;
+        bottom: -1rem;
+        
+    
+    
     }
 
 }
